adicionado script de dados, correções na autenticacao.

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -1,81 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Prudente - Consultoria Imobiliária";
+    ViewBag.Title = "Nome do Site";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-@section css{
-    <style>
-        .grid-galeria{
-            max-height: 200px;
-        }
-    </style>
-}
-
-<!--rev slider start-->
-@Html.Action("Slide", "Home", null)
-<!--full width banner-->
-<!--revolution end-->
-<div class="search-filter">
-    <div class="container">
-        @using (Html.BeginForm("Busca", "Busca", FormMethod.Get))
-        {
-            <div class="row">
-                <div class="col-md-3 col-sm-6 margin20 select-option">
-                    <section>
-                        @Html.DropDownList("BairroUrl", null, "Qual Bairro?", htmlAttributes: new { @class = "form-control" })
-                    </section>
-                </div>
-                <div class="col-md-3 col-sm-6 margin20 select-option">
-                    <section>
-                        @Html.DropDownList("TipoImovelId", null, "Qual Tipo?", htmlAttributes: new { @class = "cs-select cs-skin-elastic" })
-                    </section>
-                </div>
-                <div class="col-md-3 col-sm-6 margin20 select-option">
-                    <section>
-                        @Html.DropDownList("TipoContratoId", null, "Qual Finalidade?", htmlAttributes: new { @class = "cs-select cs-skin-elastic" })
-                    </section>
-                </div>
-                <div class="col-md-3 col-sm-6 margin20">
-                    <button type="submit" class="btn btn-red btn-lg btn-block"><i class="fa fa-search"></i>Buscar</button>
-                </div>
-            </div>
-        }
-    </div>
-</div>
-<div class="divide70"></div>
-<div class="container">
-    <h3 class="title-section clearfix">Oportunidades em destaques 
-        <a href="@Url.Action("Index","Imovel", null)" class="link-arrow">Ver todos</a>
-    </h3>
-    <div class="row">
-        @Html.Action("Imoveis","Home",null)
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12 text-center">
-            <a href="@Url.Action("Index","Imovel", null)" class="btn btn-lg btn-red">Ver todas as oportunidades</a>
-        </div>
-    </div>
-    <div class="divide60"></div>
-</div><!--property container-->
-
-<div class="divide40"></div>
-<div class="call-to-action">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-8 text-center">
-                <h3>Deseja anunciar sua propriedade aqui? </h3>
-            </div>
-            <div class="col-sm-4 text-center">
-                <a href="@Url.Action("Index", "CadastrarMeuImovel", null)">Anunciar Propriedade Agora</a>
-            </div>
-        </div>
-    </div>
-</div><!--call to action-->
-<div class="divide70"></div>
-<!-- corretores-->
-<div class="container">
-    @Html.Action("Corretores", "Home", null)
-    
-
-</div><!--corretores content-->
+<h1>Bem vindo</h1>
